Add Impressum, Gallery and visual improvements

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Manufaktur Montag</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 .w3-theme-l5 {color:#000 !important; background-color:#fff6f0 !important}
 .w3-theme-l4 {color:#000 !important; background-color:#ffe0cc !important}
@@ -50,14 +51,17 @@ body, html {
 <!-- Links (sit on top) -->
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
-    <div class="w3-col s4">
+    <div class="w3-col s3">
       <a href="#" class="w3-button w3-block w3-black">HOME</a>
     </div>
-    <div class="w3-col s4">
-      <a href="#about" class="w3-button w3-block w3-black">GALLERIE</a>
+    <div class="w3-col s3">
+      <a href="gallerie.html" class="w3-button w3-block w3-black">GALLERIE</a>
     </div>
-    <div class="w3-col s4">
-      <a href="#menu" class="w3-button w3-block w3-black">KONTAKT</a>
+    <div class="w3-col s3">
+      <a href="#kontakt" class="w3-button w3-block w3-black">KONTAKT</a>
+    </div>
+    <div class="w3-col s3">
+      <a href="https://www.instagram.com/" target="_blank" class="w3-button w3-block w3-black"><i class="fa fa-instagram"></i></a>
     </div>
   </div>
 </div>
@@ -68,7 +72,7 @@ body, html {
     <span class="w3-tag">Gestaltung und Design</span>
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:90px">Manufaktur<br>Montag</span>
+    <span class="w3-tag" style="font-size:64px">MANUFAKTUR MONTAG</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <span class="w3-tag">Sonderwünsche gern gesehen.</span>
@@ -89,12 +93,10 @@ body, html {
       <p>Taschenkritiker und Besitzer einer Tasche: Rolfgang Schwift</p>
     </div>
     <img src="pictures/taschefeuer.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-    <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
-    <p><strong>Address:</strong> 15 Adr street, 5015, NY</p>
   </div>
 </div>
 
-<!-- Menu Container -->
+<!-- Aktuelles Container -->
 <div class="w3-container" id="aktuelles">
   <div class="w3-content" style="max-width:700px">
  
@@ -133,11 +135,10 @@ body, html {
 </div>
 
 <!-- Contact/Area Container -->
-<div class="w3-container" id="where" style="padding-bottom:32px;">
+<div class="w3-container" id="kontakt" style="padding-bottom:32px;">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
-    <p>Find us at some address at some place.</p>
-    <img src="pictures/taschedavid.jpg" class="w3-image" style="width:100%">
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">KONTAKT</span></h5>
+    <p>Kontaktdaten, Telefon, Adresse, etc</p>
     <p><span class="w3-tag">FYI!</span> Alle Taschen sind vegan.</p>
     <p><strong>Schmack</strong> dir eine Tasche nach deinen Vorstellungen!</p>
     <!--
@@ -156,7 +157,7 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
-  <p><a href="https://lmgtfy.com/?q=impressum" title="Impressum" target="_blank" class="w3-hover-text-green">Impressum</a></p>
+  <p><a href="impressum.html" title="Impressum" class="w3-hover-text-green">Impressum</a></p>
 </footer>
 
 <script>
