Add Instagram button on all pages

--- a/gallerie.html
+++ b/gallerie.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 .w3-theme-l5 {color:#000 !important; background-color:#fff6f0 !important}
 .w3-theme-l4 {color:#000 !important; background-color:#ffe0cc !important}
@@ -143,14 +144,17 @@ p{
 <!-- Links (sit on top) -->
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
-    <div class="w3-col s4">
+    <div class="w3-col s3">
       <a href="index.html" class="w3-button w3-block w3-black">HOME</a>
     </div>
-    <div class="w3-col s4">
+    <div class="w3-col s3">
       <a href="#" class="w3-button w3-block w3-black">GALLERIE</a>
     </div>
-    <div class="w3-col s4">
+    <div class="w3-col s3">
       <a href="index.html#kontakt" class="w3-button w3-block w3-black">KONTAKT</a>
+    </div>
+    <div class="w3-col s3">
+      <a href="https://www.instagram.com/" target="_blank" class="w3-button w3-block w3-black"><i class="fa fa-instagram"></i></a>
     </div>
   </div>
 </div>
