Add Impressum and customize index

--- a/gallerie.html
+++ b/gallerie.html
@@ -154,7 +154,7 @@ p{
       <a href="index.html#kontakt" class="w3-button w3-block w3-black">KONTAKT</a>
     </div>
     <div class="w3-col s3">
-      <a href="https://www.instagram.com/" target="_blank" class="w3-button w3-block w3-black"><i class="fa fa-instagram"></i></a>
+      <a href="https://www.instagram.com/ManufakturMontag" target="_blank" class="w3-button w3-block w3-black"><i class="fa fa-instagram"></i></a>
     </div>
   </div>
 </div>
