--- a/impressum.html
+++ b/impressum.html
@@ -61,7 +61,7 @@ body, html {
       <a href="index.html#kontakt" class="w3-button w3-block w3-black">KONTAKT</a>
     </div>
     <div class="w3-col s3">
-      <a href="https://www.instagram.com/" target="_blank" class="w3-button w3-block w3-black"><i class="fa fa-instagram"></i></a>
+      <a href="https://www.instagram.com/ManufakturMontag" target="_blank" class="w3-button w3-block w3-black"><i class="fa fa-instagram"></i></a>
     </div>
   </div>
 </div>
@@ -72,32 +72,56 @@ body, html {
 <!-- Impressum -->
 <div class="w3-container" id="impressum">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">IMPRESSUM</span></h5>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
-    <p>Hier ist Platz für das Impressum</p>
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide"></span></h5>
+    <p><span class="w3-tag">Impressum</span><br><br><small>
+    Manufaktur Montag<br>
+    Manuela Montag<br>
+    Schauwerbegestalterin<br><br>
+    Wiesenstr.8<br>
+    86551 Aichach<br>
+    Deutschland<br><br>
+    Telefon: 08251 8921775<br>
+    Email: manuelamontag@t-online.de<br><br>
+    Kleinunternehmer gemäß §19UstG<br>
+    Dieses Impressum gilt auch für den Instagramaccount<br><br>
+    </small></p>
+    <p><span class="w3-tag">Inhalt des Onlineangebotes</span><br><br><small>
+    Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit,Vollständigkeit oder Qulität der bereitgestellten Informationen.Haftungsansprüche gegen den Autor, welche sich auf Schäden materieller oder ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen, sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt. Alle Angeboten sind freibleibend und unverbindlich. Der Autor behält es sich ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen. <br>
+    </small></p>
+    <p><span class="w3-tag">Verweise und Links</span><br><br><small>
+   Mit Urteil vom 12.05.1998 hat das Landgericht Hamburg entschieden, dass man durch die Ausbringung eines Links die Inhalte der gelinkten Seite gegebenenfalls mit zu verantworten hat. Dies kann, so das LG, nur daduch verhindert werden, dasss man sich ausdrücklich von diesen Inhalten distanziert. Von unseren Internetseiten führen Links zu anderen Seiten im Internet. Für all diese Links sowie Links aus unserem Forum gilt:: Wir möchten ausdrücklichbetonen, dass wir keinerlei Einfluss auf die Gestaltunf und die Inhalter der gelinkten Seiten haben. Aus diesem Grund distanzieren wir uns hiermit ausdrücklichvon allen Inhalten gelinkter Seitne und machen uns ihre Inhalte nicht zu eigen. Diese Erklärung gilt für alle Links und für alle Inhalte der Seiten, zu denen bei und gelinkte Inhalte führen. Wir distanzieren uns hiermit ebenfalls von den Inhalten in unserem Forum. <br>
+    </small></p>
+    <p><span class="w3-tag">Urheber- und Kennzeichenrecht</span><br><br><small>
+    Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Bilder, Grafiken, Tondokumente, Videosequenzen und Texte zu beachten, von Ihm selbst erstellte Bilder, Grafiken, Tondokumente, Videosequenzen und Texte zu nutzen oder auf lizenzfreie Bilder, Grafiken, Tondokumente, Videosequenzen und Texte zurückzugreifen. Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten Marken- und Warenzeichen unterliegen uneingeschränkt den Bestimmungen des jeweils gültigen Kennzeichenrechts und den Besitzrechten der jeweiligen eingetragenenen Eigentümer. Allein aufgrund der bloßen Nennung ist nicht der Schluss zu ziehen, dass Markenzeichen nicht durch Rechte Dritter geschützt sind! Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte bleibt aullein beim Sutor der Seiten. Eine Vervielfältigung oder Verwendung solcher Bilder, Grafiken, Tondokumente, Videosequenzen und Texte in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des Autors nicht gestattet.<br>
+    </small></p>
+    <p><span class="w3-tag">Datenschutz</span><br><br><small>
+            Allgemeine Hinweise<br>
+
+            <i>Wer ist verantwortlich für die Datenerfassung auf dieser Website?</i><br>
+
+Die Datenverarbeitung auf dieser Website erfolgt durch den Websitebetreiber. Dessen
+Kontaktdaten können Sie dem Impressum dieser Website entnehmen.<br>
+
+<i>Wie erfassen wir Ihre Daten?</i><br>
+
+Ihre Daten werden nur dadurch erhoben, dass Sie uns diese selbst mitteilen.
+Andere Daten werden automatisch beim Besuch der Website durch unserer IT-Systeme erfasst. Das sind vor allem technische Daten wie z.B Internetbrowser, Betriebssystem oder Uhrzeit des Seitenaufrufs). Die Erfassung dieser Daten erfolgt automatisch, sobald Sie unsere Website betreten.<br>
+
+<i>Wofür nutzen wir Ihre Daten?</i><br>
+
+Ein Teil der Daten wird erhoben, um eine fehlerfreie Bereitstellung der Website zu gewährleisten. Andere Daten können zur Analyse Ihres Nutzerverhaltens verwendet werden.<br>
+
+<i>Welche Rechte haben Sie bezüglich Ihrer Daten?</i><br>
+
+Sie haben jederzeit das Recht unentgeltlich Auskunft über Herkunft, Empfänger und Zweck Ihrer gespeicherten personenbezogenen Daten zu erhalten. Auch haben Sie das Recht, die Berichtigung, Sperrung oder Löschung dieser Daten zu verlangen. Ihnen steht ein Beschwerderecht bei der zuständigen Aufsichtsbehörde zu.
+Die betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenenbezogenen Daten vertraulich entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.<br>
+
+Wir weisen darauf hin, dass die Datenübertragung im Internet (z.b. bei der Kommunikation
+per Email) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.<br>
+    </small></p>
+    <p><span class="w3-tag">Urheber- und Kennzeichenrecht</span><br><br><small>
+            Dieser Haftungsausschlussesist als Teil des Internetangeboteszu betrachten, von dem aus auf diese Seite verwiesen wurde. Sofern Teile oder einzelne Formulierungen dieses Testes der geltenden Rechtslage nicht, nicht mehr oder nicht vollsttändig entsprechen sollten, bleiben die übrigen Teile des Dokumentes in Ihrem Inhalt und ihrer Gültigkeit davon unberührt.
+    </small></p>
   </div>
 </div>
 
