--- a/gallerie.html
+++ b/gallerie.html
@@ -209,7 +209,7 @@ p{
 
 
 <!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
+<footer class="w3-center w3-grey w3-padding-48 w3-large">
   <p><a href="index.html" title="Zurück zur Hautpseite" class="w3-hover-text-green">Zurück zur Hauptseite</a></p>
 </footer>
 
