Bin Laden ändern und Leerzeichen Mobilnr

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ body, html {
 <div class="w3-container" id="zumir">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ZU MIR</span></h5>
-    <p>Manuela Montag - eigentlich wollte ich immer schon Schneiderin werden, bin dann allerdings Schauwerbegestalterin und sogar Hauswirtschafterin geworden. Bin Laden von drei wundersamen Kindern und hauptberuflich im Büro unseres Baubetriebes tätig und um ehrlich zu sein: ich bin süchtig nach Kreativität egal in welcher Form.
+    <p>Manuela Montag - eigentlich wollte ich immer schon Schneiderin werden, bin dann allerdings Schauwerbegestalterin und sogar Hauswirtschafterin geworden. Bin Mutter von drei wunderbaren Kindern und hauptberuflich im Büro unseres Baubetriebes tätig und um ehrlich zu sein: ich bin süchtig nach Kreativität egal in welcher Form.
     
     Freue mich auf jeden Kundenwunsch!</p>
     <p>Liebe Grüße,<br>
@@ -195,7 +195,7 @@ body, html {
     Deutschland<br><br>
     </p>
     <p>Telefon: 08251 8921775<br>
-    Mobil und Whatsapp: 017678987977<br>
+    Mobil und Whatsapp: 0176 78987977<br>
     Email: manuelamontag@t-online.de<br>
     Instagram: <a href="https://www.instagram.com/ManufakturMontag" target="_blank" class="w3-button"><i class="fa fa-instagram"></i></a><br>
     </p>
