--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ body, html {
       <h5>Leider sind aufgrund der aktuellen Situation alle Märkte bis vorraussichtlich Ende August abgesagt.</h5>
       <p class="w3-text-grey">Natürlich können Sie trotzdem jederzeit per Telefon oder Mail eine Bestellung aufgeben!</p><br>
       
-      <h5>Künstlermarkt in Aichach</h5>
-      <p class="w3-text-grey">voraussichtlich am 7. September 2020 </p><br>
+      <h5></h5>
+      <p class="w3-text-grey"></p><br>
 
     </div>
     <div id="Neuigkeiten" class="w3-container menu w3-padding-48 w3-card">
